tests/ui/const-generics/associated-const-bindings/dyn-compat-generic-assoc-const.stderr
error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/dyn-compat-generic-assoc-const.rs:15:16
   |
LL |     let _: dyn Trait;
   |                ^^^^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/dyn-compat-generic-assoc-const.rs:10:11
   |
LL | trait Trait {
   |       ----- this trait is not dyn compatible...
LL |     const POLY<T>: T;
   |           ^^^^ ...because it contains generic associated const `POLY`
   = help: consider moving `POLY` to another trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
